--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.1.RELEASE'
+	id 'com.github.sherter.google-java-format' version '0.8'
 }
 
 apply plugin: 'java'
