--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,5 +15,7 @@ jobs:
         java-version: 11
     - name: Format Code
       run: ./gradlew googleJavaFormat
+    - name: Apply goJF
+      run: git commit -a -m “[goJF]”
     - name: Build with Gradle
       run: ./gradlew build
