--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,9 +16,8 @@ jobs:
     - name: Format Code
       run: |
         ./gradlew googleJavaFormat
+        git config user.email "myztmm@gmail.com"
+        git config user.name "tom-myz"
         git commit -a -m “[goJF]”
-      env:
-        GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
-        GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
     - name: Build with Gradle
       run: ./gradlew build
