--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,5 +19,6 @@ jobs:
         git config user.email "myztmm@gmail.com"
         git config user.name "tom-myz"
         git commit -a -m “[goJF]”
+        git push
     - name: Build with Gradle
       run: ./gradlew build
