--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Format Code
       run: |
         ./gradlew googleJavaFormat
-        git config user.email shelffy@example.com
-        git config user.name {{ github.actor }}
+        git config user.email "shelffy@example.com"
+        git config user.name "{{ github.actor }}"
         git commit -a -m “[goJF]”
         git push origin HEAD:{{ github.base_ref }}
     - name: Build with Gradle
