--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,6 +19,7 @@ jobs:
         git config user.email myztmm@gmail.com
         git config user.name tom-myz
         git commit -a -m “[goJF]”
+        printenv
         git push origin "HEAD:$GITHUB_REF"
     - name: Build with Gradle
       run: ./gradlew build
