--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,9 @@ jobs:
         git config user.email myztmm@gmail.com
         git config user.name tom-myz
         git commit -a -m “[goJF]”
-        printenv
+        echo ${{ github.ref }}
+        echo ${{ github.base_ref }}
+        printenv | grep fix
         git push origin "HEAD:$GITHUB_REF"
     - name: Build with Gradle
       run: ./gradlew build
