--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,9 +19,6 @@ jobs:
         git config user.email myztmm@gmail.com
         git config user.name tom-myz
         git commit -a -m “[goJF]”
-        echo ${{ github.ref }}
-        echo ${{ github.base_ref }}
-        printenv | grep fix
-        git push origin "HEAD:$GITHUB_REF"
+        git push origin "HEAD:$GITHUB_HEAD_REF"
     - name: Build with Gradle
       run: ./gradlew build
