--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Format Code
       run: |
         ./gradlew googleJavaFormat
-        git config user.email myztmm@gmail.com
-        git config user.name tom-myz
+        git config --global user.email "myztmm@gmail.com"
+        git config --global user.name "tom-myz"
         git commit -a -m “[goJF]”
         git push origin "HEAD:$GITHUB_HEAD_REF"
     - name: Build with Gradle
