--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,6 @@ jobs:
         git config --global user.name "tom-myz"
         git commit -a -m “[goJF]”
         git remote show origin
-        git push origin "HEAD:$GITHUB_HEAD_REF"
+        git push "$GITHUB_HEAD_REF"
     - name: Build with Gradle
       run: ./gradlew build
