--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
         git config --global user.email "myztmm@gmail.com"
         git config --global user.name "tom-myz"
         git commit -a -m “[goJF]”
-        git remote show origin
-        git push "$GITHUB_HEAD_REF"
+        git checkout -b "$GITHUB_HEAD_REF"
+        git push origin "$GITHUB_HEAD_REF"
     - name: Build with Gradle
       run: ./gradlew build
