--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,11 @@ jobs:
         git config --global user.name "tom-myz"
         git checkout -b "$GITHUB_HEAD_REF"
         ./gradlew googleJavaFormat
-        git commit -a -m “[goJF]”
-        git push "https://${{secrets.TOKEN}}@github.com/tom-myz/shelffy.git" "$GITHUB_HEAD_REF"
+    - name: Try Commit
+      run: git commit -a -m [goJF]
+      continue-on-error: true
+    - name: Push If Necessary
+      run: git push "https://${{secrets.TOKEN}}@github.com/${{github.repository}}.git" "$GITHUB_HEAD_REF"
+      if: success()
     - name: Build with Gradle
       run: ./gradlew build
