Test pull request work flow (#1)
Set up automatic code formatter

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [pull_request]
 
 jobs:
-  build:
+  reformat:
 
     runs-on: ubuntu-latest
 
@@ -15,10 +15,14 @@ jobs:
         java-version: 11
     - name: Format Code
       run: |
+        git config --global user.email "myztmm@gmail.com"
+        git config --global user.name "tom-myz"
+        git checkout -b "$GITHUB_HEAD_REF"
         ./gradlew googleJavaFormat
-        git config user.email {{ github.actor }}
-        git config user.name "tom-myz"
-        git commit -a -m “[goJF]”
-        git push origin HEAD:{{ github.base_ref }}
+    - name: Try Commit And Push
+      run: |
+        git commit -a -m [goJF]
+        git push "https://${{secrets.TOKEN}}@github.com/${{github.repository}}.git" "$GITHUB_HEAD_REF"
+      continue-on-error: true
     - name: Build with Gradle
       run: ./gradlew build
