Add simple controller (#2)
Test goJF

* Add simple controller

* [goJF]

* Try useless commit

* [goJF]

* Specify remote branch

* Fix

* [goJF]

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         git config --global user.email "myztmm@gmail.com"
         git config --global user.name "tom-myz"
-        git checkout -b "$GITHUB_HEAD_REF"
+        git checkout -b "$GITHUB_HEAD_REF" "origin/$GITHUB_HEAD_REF"
         ./gradlew googleJavaFormat
     - name: Try Commit And Push
       run: |
